syntax="proto3";

package user;

service UserService {
    rpc create (CreateUserDto) returns (LoginResponse);
    rpc signIn (LoginUserDto) returns (LoginResponse);
    rpc verifyToken (Token) returns (UserId);
}


message CreateUserDto{
    string email=1;
    string name=2;
    string password=3;
}

message LoginUserDto{
    string email=1;
    string password=3;
}


message LoginResponse{
    string accessToken=1;
    string refreshToken=2;
}


message LoginUsetDto{
    string email=1;
    string password=2;
}

message Token{
    string accessToken=1;
}

message UserId{
    string id=1;
}


